# memory_ecology_agent

./: .env.example  .gitignore  QUICKSTART.md  README.md  TODO.md  pyproject.toml  temp.md
.github/workflows/: docs-ci.yml  pytest-ci.yml
_docs/standards/: documentation_operations.md
_evals/prompts/: discord-integration.md  memory-ecology-agent-poc.md  memory-ecology-agent-reference.md
_evals/reports/: deepseek_reasoning_high_3072_diagnostic_2026-06-03_run1.raw.json  deepseek_reasoning_high_3072_diagnostic_2026-06-03_run2.raw.json  deepseek_reasoning_raw_diagnostic_exclude_only_2026-06-03.json  deepseek_reasoning_raw_diagnostic_exclude_only_2026-06-03.md  deepseek_reasoning_raw_diagnostic_exclude_only_2026-06-03.raw.json  deepseek_reasoning_raw_diagnostic_exclude_only_full_2026-06-03.json  deepseek_reasoning_raw_diagnostic_exclude_only_full_2026-06-03.md  deepseek_reasoning_raw_diagnostic_exclude_only_full_2026-06-03.raw.json  deepseek_reasoning_raw_diagnostic_low_exclude_2026-06-03.json  live_digest_model_comparison_2026-06-02.json  (+70 more)
app/: __init__.py  config.py  main.py  schemas.py
data/: .gitkeep
scripts/: agent-workflow-hook.mjs  test-agent-workflow-hook.mjs  test-validators.mjs  validate-doc-links.mjs  validate-frontmatter.mjs
tests/: conftest.py  test_chat_replay_context.py  test_closed_loop_hardening.py  test_db_seed.py  test_digest_decider.py  test_discord_integration.py  test_live_digest_runner.py  test_llm.py  test_llm_smoke.py  test_local_files.py  test_observation_extractor.py  test_openrouter_structured_output_probe.py  test_wake_cycle.py
(+170 files in other folders)
