[project]
name = "memory-ecology-agent"
version = "0.1.0"
description = "Trace-first Memory Ecology Agent PoC"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "discord-py>=2.5",
  "pydantic>=2.10",
  "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
